--- a/res/values-en-rGB/strings.xml
+++ b/res/values-en-rGB/strings.xml
@@ -336,7 +336,7 @@
     <string name="nfc_quick_toggle_title" msgid="6769159366307299004">"NFC"</string>
     <string name="nfc_quick_toggle_summary" msgid="1988408027741447231">"Use Near-Field Communication to read and exchange tags"</string>
     <string name="nfc_toggle_error" msgid="2233172102497535522">"An error occurred."</string>
-    <string name="wifi_quick_toggle_title" msgid="874495178395350104">"WiFi"</string>
+    <string name="wifi_quick_toggle_title" msgid="874495178395350104">"Wi-Fi"</string>
     <string name="wifi_quick_toggle_summary" msgid="1047950931623694366">"Turn on Wi-Fi"</string>
     <string name="wifi_settings" msgid="4746946030627213196">"Wi-Fi settings"</string>
     <string name="wifi_settings_category" msgid="2810363951104753710">"Wi-Fi settings"</string>
@@ -348,7 +348,7 @@
     <string name="wifi_fail_to_scan" msgid="6194542252808587669">"Unable to scan for networks"</string>
     <string name="wifi_notify_open_networks" msgid="3755768188029653293">"Network notification"</string>
     <string name="wifi_notify_open_networks_summary" msgid="3038290727701553612">"Notify me when an open network is available"</string>
-    <string name="wifi_add_network" msgid="1671334951296205616">"Add WiFi network"</string>
+    <string name="wifi_add_network" msgid="1671334951296205616">"Add Wi-Fi network"</string>
     <string name="wifi_access_points" msgid="2664629396767022441">"Wi-Fi networks"</string>
     <string name="wifi_menu_scan" msgid="1470911530412095868">"Scan"</string>
     <string name="wifi_menu_advanced" msgid="7522252991919573664">"Advanced"</string>
@@ -509,7 +509,7 @@
     <string name="device_info_not_available" msgid="8062521887156825182">"Not available"</string>
     <string name="device_status_activity_title" msgid="1411201799384697904">"Status"</string>
     <string name="device_status" msgid="607405385799807324">"Status"</string>
-    <string name="device_status_summary" msgid="2599162787451519618">"phone number, signal, etc."</string>
+    <string name="device_status_summary" msgid="2599162787451519618">"Phone number, signal, etc."</string>
     <string name="storage_settings" msgid="4211799979832404953">"Storage"</string>
     <string name="storage_settings_title" msgid="8746016738388094064">"Storage settings"</string>
     <string name="storage_settings_summary" product="nosdcard" msgid="3543813623294870759">"Unmount USB storage, view available storage"</string>
@@ -584,6 +584,7 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAP or CHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"APN type"</string>
+    <string name="apn_protocol" msgid="3272222921649348640">"APN protocol"</string>
     <string name="menu_delete" msgid="6981294422841124659">"Delete APN"</string>
     <string name="menu_new" msgid="3014205883303921729">"New APN"</string>
     <string name="menu_save" msgid="8109345640668285399">"Save"</string>
@@ -674,7 +675,7 @@
     <string name="lockpassword_confirm_your_pin_header" msgid="49038294648213197">"Confirm your PIN"</string>
     <string name="lockpassword_confirm_passwords_dont_match" msgid="6850677112663979120">"Passwords don\'t match"</string>
     <string name="lockpassword_confirm_pins_dont_match" msgid="4757532830594400147">"PINs don\'t match"</string>
-    <string name="lockpassword_password_set_toast" msgid="4875050283108629383">"password has been set"</string>
+    <string name="lockpassword_password_set_toast" msgid="4875050283108629383">"Password has been set"</string>
     <string name="lockpassword_pin_set_toast" msgid="6011826444725291475">"PIN has been set"</string>
     <string name="lockpassword_pattern_set_toast" msgid="6867259621331406236">"Pattern has been set"</string>
     <string name="lock_settings_title" msgid="975088518210629938">"Screen unlock"</string>
@@ -749,7 +750,7 @@
     <string name="filter_apps_third_party" msgid="7786348047690140979">"Downloaded"</string>
     <string name="filter_apps_running" msgid="7767071454371350486">"Running"</string>
     <string name="filter_apps_onsdcard" product="nosdcard" msgid="4843063154701023349">"USB storage"</string>
-    <string name="filter_apps_onsdcard" product="default" msgid="1477351142334784771">"On SD card"</string>
+    <string name="filter_apps_onsdcard" product="default" msgid="1477351142334784771">"SD card"</string>
     <string name="disabled" msgid="9206776641295849915">"Disabled"</string>
     <string name="no_applications" msgid="5190227407135243904">"No applications."</string>
     <string name="internal_storage" msgid="1584700623164275282">"Internal storage"</string>
@@ -925,7 +926,7 @@
     <string name="controls_subtitle" msgid="390468421138288702">"Adjust power use"</string>
     <string name="packages_subtitle" msgid="4736416171658062768">"Included packages"</string>
     <string name="power_screen" msgid="2353149143338929583">"Display"</string>
-    <string name="power_wifi" msgid="2382791137776486974">"WiFi"</string>
+    <string name="power_wifi" msgid="2382791137776486974">"Wi-Fi"</string>
     <string name="power_bluetooth" msgid="4373329044379008289">"Bluetooth"</string>
     <string name="power_cell" msgid="6596471490976003056">"Mobile standby"</string>
     <string name="power_phone" msgid="5392641106474567277">"Voice calls"</string>
@@ -954,8 +955,8 @@
     <string name="battery_sugg_radio" msgid="8211336978326295047">"Switch to airplane mode to save power in areas with no mobile coverage"</string>
     <string name="battery_desc_display" msgid="5432795282958076557">"Battery used by the display and backlight"</string>
     <string name="battery_sugg_display" msgid="3370202402045141760">"Reduce the screen brightness and/or screen timeout"</string>
-    <string name="battery_desc_wifi" msgid="1702486494565080431">"Battery used by WiFi"</string>
-    <string name="battery_sugg_wifi" msgid="7542345142282261691">"Turn off WiFi when not using it or where it is not available"</string>
+    <string name="battery_desc_wifi" msgid="1702486494565080431">"Battery used by Wi-Fi"</string>
+    <string name="battery_sugg_wifi" msgid="7542345142282261691">"Turn off Wi-Fi when not using it or where it is not available"</string>
     <string name="battery_desc_bluetooth" msgid="7535520658674621902">"Battery used by Bluetooth"</string>
     <string name="battery_sugg_bluetooth_basic" msgid="817276933922157788">"Turn off Bluetooth when you aren\'t using it"</string>
     <string name="battery_sugg_bluetooth_headset" msgid="8214816222115517479">"Try connecting to a different Bluetooth device"</string>
@@ -1014,7 +1015,7 @@
     <string name="tts_notif_engine_install_title" msgid="7000346872482649034">"Speech synthesis engine installed"</string>
     <string name="tts_notif_engine_install_message" msgid="5304661142202662693">"Enable new engine before use"</string>
     <string name="gadget_title" msgid="7455548605888590466">"Power Control"</string>
-    <string name="gadget_toggle_wifi" msgid="2382963973155082629">"Updating WiFi setting"</string>
+    <string name="gadget_toggle_wifi" msgid="2382963973155082629">"Updating Wi-Fi setting"</string>
     <string name="gadget_toggle_bluetooth" msgid="7538903239807020826">"Updating Bluetooth setting"</string>
     <string name="vpn_settings_activity_title" msgid="7276864950701612579">"VPN settings"</string>
     <string name="vpn_connect_to" msgid="2541409082892684362">"Connect to <xliff:g id="NAME">%s</xliff:g>"</string>
@@ -1115,7 +1116,7 @@
     <string name="credentials_wrong_password" msgid="7525192410790152041">"Please enter the correct password."</string>
     <string name="credentials_reset_warning" msgid="6392481296673345268">"Please enter the correct password. You have one more try to enter the correct password before the credential storage is erased."</string>
     <string name="credentials_reset_warning_plural" msgid="454828369803055270">"Please enter the correct password. You have <xliff:g id="NUMBER">%1$d</xliff:g> more tries to enter the correct password before the credential storage is erased."</string>
-    <string name="credentials_passwords_mismatch" msgid="5288565139590031733">"passwords do not match."</string>
+    <string name="credentials_passwords_mismatch" msgid="5288565139590031733">"Passwords do not match."</string>
     <string name="credentials_passwords_empty" msgid="8647631321684363549">"You must enter and confirm a password."</string>
     <string name="credentials_password_empty" msgid="8292138152983330473">"Please enter the password."</string>
     <string name="credentials_password_too_short" msgid="7502749986405522663">"The password must contain at least 8 characters."</string>
@@ -1137,7 +1138,7 @@
     <string name="privacy_settings" msgid="9206631214140954954">"Privacy"</string>
     <string name="privacy_settings_title" msgid="1987089301293213705">"Privacy settings"</string>
     <string name="backup_section_title" msgid="8856083167469467588">"Back up and restore"</string>
-    <string name="personal_data_section_title" msgid="7815209034443782061">"personal data"</string>
+    <string name="personal_data_section_title" msgid="7815209034443782061">"Personal data"</string>
     <string name="backup_data_title" msgid="1239105919852668016">"Back up my data"</string>
     <string name="backup_data_summary" msgid="6515285107793232815">"Back up application data, Wi-Fi passwords and other settings, to Google servers"</string>
     <string name="auto_restore_title" msgid="5397528966329126506">"Automatic restore"</string>
@@ -1159,4 +1160,7 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Incoming calls"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Notifications"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Feedback"</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"4G settings"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"Set up &amp; manage 4G network and modem"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G MAC address"</string>
 </resources>
