--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -584,6 +584,7 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAP vagy CHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"APN típusa"</string>
+    <string name="apn_protocol" msgid="3272222921649348640">"Hozzáférési pont (APN) protokollja"</string>
     <string name="menu_delete" msgid="6981294422841124659">"APN törlése"</string>
     <string name="menu_new" msgid="3014205883303921729">"Új APN"</string>
     <string name="menu_save" msgid="8109345640668285399">"Mentés"</string>
@@ -1122,16 +1123,16 @@
     <string name="credentials_erased" msgid="7700309135582200849">"A hitelesítési adatok tárolója kiürítve."</string>
     <string name="credentials_enabled" msgid="7588607413349978930">"A hitelesítési adatok tárolója engedélyezve van."</string>
     <string name="credentials_disabled" msgid="7453188089059045380">"A hitelesítési adatok tárolója le van tiltva."</string>
-    <!-- outdated translation 5563670455056905298 -->     <string name="encrypted_fs_category" msgid="1841367653663913956">"Kódolt fájlrendszer"</string>
-    <!-- outdated translation 1460957282314335666 -->     <string name="encrypted_fs_enable" msgid="3884033081603327729">"Privát felhasználói adatok titkosítása"</string>
-    <!-- outdated translation 1350828979802222331 -->     <string name="encrypted_fs_enable_summary" msgid="5635188119509076089">"Engedélyezze a kódolt fájlrendszerben való tárolást a privát felhasználói adatok számára ezen az eszközön"</string>
-    <!-- outdated translation 5616902699813992220 -->     <string name="encrypted_fs_enable_dialog" msgid="919487211207214266">"A titkosított fájlrendszerek bekapcsolása adattörlést igényel az eszközön."</string>
-    <!-- outdated translation 6188718276152942357 -->     <string name="encrypted_fs_disable_dialog" msgid="6960413613985682501">"A Titkosított Fájlrendszerek kikapcsolása adattörlést igényel az eszközön."</string>
-    <!-- outdated translation 5517966150893551199 -->     <string name="encrypted_fs_enable_button" msgid="8453841319751433751">"Engedélyezés"</string>
-    <!-- outdated translation 5723342350828112970 -->     <string name="encrypted_fs_disable_button" msgid="8468354944060220496">"Letiltás"</string>
-    <!-- outdated translation 1629526807926334692 -->     <string name="encrypted_fs_cancel_button" msgid="4785921255266305799">"Mégse"</string>
-    <!-- outdated translation 7438020150015354683 -->     <string name="encrypted_fs_cancel_confirm" msgid="853572431153803557">"Titkosított fájlrendszer mód visszavonva."</string>
-    <!-- outdated translation 7428547491734194431 -->     <string name="encrypted_fs_alert_dialog_title" msgid="583462447886934755">"Titkosított fájlrendszerek-figyelmeztetés."</string>
+    <string name="encrypted_fs_category" msgid="1841367653663913956">"Titkosított fájlrendszer"</string>
+    <string name="encrypted_fs_enable" msgid="3884033081603327729">"Privát felhasználói adatok titkosítása"</string>
+    <string name="encrypted_fs_enable_summary" msgid="5635188119509076089">"Engedélyezze a kódolt fájlrendszerben való tárolást a privát felhasználói adatok számára ezen az eszközön"</string>
+    <string name="encrypted_fs_enable_dialog" msgid="919487211207214266">"A titkosított fájlrendszerek bekapcsolása adattörlést igényel az eszközön."</string>
+    <string name="encrypted_fs_disable_dialog" msgid="6960413613985682501">"A titkosított fájlrendszerek kikapcsolása adattörlést igényel az eszközön."</string>
+    <string name="encrypted_fs_enable_button" msgid="8453841319751433751">"Bekapcsolás"</string>
+    <string name="encrypted_fs_disable_button" msgid="8468354944060220496">"Kikapcsolás"</string>
+    <string name="encrypted_fs_cancel_button" msgid="4785921255266305799">"Mégse"</string>
+    <string name="encrypted_fs_cancel_confirm" msgid="853572431153803557">"Titkosított fájlrendszer mód visszavonva."</string>
+    <string name="encrypted_fs_alert_dialog_title" msgid="583462447886934755">"Titkosított fájlrendszerek-figyelmeztetés."</string>
     <string name="emergency_tone_title" msgid="1055954530111587114">"Segélyhívás hangja"</string>
     <string name="emergency_tone_summary" msgid="722259232924572153">"Viselkedés beállítása segélyhívás kezdeményezésekor"</string>
     <string name="privacy_settings" msgid="9206631214140954954">"Adatvédelem"</string>
@@ -1159,4 +1160,197 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Beérkező hívások"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Értesítések"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Visszajelzés"</string>
+
+    <string name="battery_history_label">Akkumulátor-előzmények</string>
+    <string name="device_hostname">Készülék hosztneve</string>
+    <string name="bluetooth_profile_hid">HID</string>
+    <string name="bluetooth_summary_connected_to_hid">Csatlakoztatott HID eszköz</string>
+    <string name="bluetooth_hid_profile_summary_connected">Csatlakoztatott HID eszköz</string>
+    <string name="bluetooth_hid_profile_summary_use_for">Használja HID eszközként</string>
+    <string name="hostname_save">Mentés</string>
+    <string name="hostname_cancel">Mégsem</string>
+    <string name="wimax_quick_toggle_title">WiMAX</string>
+    <string name="wimax_quick_toggle_summary">WiMAX bekapcsolása</string>
+    <string name="wimax_starting">Bekapcsolás\u2026</string>
+    <string name="wimax_stopping">Kikapcsolás\u2026</string>
+    <string name="wimax_error">Hiba</string>
+    <string name="error_wimax_starting">Nem lehet a WiMAX-ot elindítani</string>
+    <string name="error_wimax_stopping">Nem lehet a WiMAX-ot leállítani</string>
+    <string name="wimax_settings_title">WiMAX beállítások</string>
+    <string name="wimax_settings_category">WiMAX beállítások</string>
+    <string name="wimax">WiMAX</string>
+    <string name="scan_wimax">Keresés</string>
+    <string name="wimax_menu_advanced">Haladó</string>
+    <string name="wimax_networks">WiMAX hálózatok</string>
+    <string name="wimax_scan_networks">WiMAX hálózatok keresése</string>
+    <string name="error_wimax_scanning">Nem kereshető hálózat</string>
+    <string name="wimax_auto_connect">Auto. kapcs.</string>
+    <string name="wimax_auto_connect_summary">Automatikus kapcsolódás a legutoljára használt hálózathoz, ha elérhető</string>
+    <string name="wimax_context_menu_connect">Kapcsolódás a hálózathoz</string>
+    <string name="wimax_context_menu_disconnect">Lekapcsolódás a hálózatról</string>
+    <string name="error_wimax_connecting">Nem lehet a hálózathoz kapcsolódni</string>
+    <string name="wimax_signal_3">Kiváló</string>
+    <string name="wimax_signal_2">Jó</string>
+    <string name="wimax_signal_1">Közepes</string>
+    <string name="wimax_signal_0">Gyenge</string>
+    <string name="wimax_advanced_titlebar">Haladó</string>
+    <string name="wimax_advanced_mac_address_title">MAC cím</string>
+    <string name="wimax_advanced_hw_version_title">Hardver Verzió</string>
+    <string name="wimax_advanced_sw_version_title">Firmware Verzió</string>
+    <string name="wimax_advanced_signal_strength_rssi_title">Jelerősség (RSSI)</string>
+    <string name="wimax_advanced_signal_strength_simple_title">Jelerősség (Simple)</string>
+    <string name="wimax_ip_settings_titlebar">IP beállítások</string>
+    <string name="wimax_ip_address">IP címek</string>
+    <string name="wimax_gateway">Árjáró</string>
+    <string name="wimax_status_scanning">Keresés\u2026</string>
+    <string name="wimax_status_connecting">Kapcsolódás\u2026</string>
+    <string name="wimax_status_connecting_to">Kapcsolódás a következőhöz: <xliff:g id="network_name">%1$s</xliff:g>\u2026</string>
+    <string name="wimax_status_connected">Kapcsolódva</string>
+    <string name="wimax_status_connected_to">Kapcsolódva a következőhöz: <xliff:g id="network_name">%1$s</xliff:g></string>
+    <string name="wimax_status_disconnecting">Lekapcsolódás\u2026</string>
+    <string name="wimax_status_disconnecting_from">Lekapcsolódás a következőről: <xliff:g id="network_name">%1$s</xliff:g>\u2026</string>
+    <string name="wimax_status_disconnected">Lekapcsolódva</string>
+    <string name="notification_blink_title">Villogó jelzőfény</string>
+    <string name="notification_blink_summary">Villogó zöld fény értesítéseknél</string>
+    <string name="notification_always_on_title">Jelzőfény mindig engedélyezve</string>
+    <string name="notification_always_on_summary">Engedélyezi a jelzőfényt bekapcsolt képernyőnél</string>
+    <string name="notification_charging_title">Töltés jelzőfény</string>
+    <string name="notification_charging_summary">Engedélyezi a sárga jelzőfényt töltés közben</string>
+    <string name="cpu_info">CPU infó</string>
+    <string name="mem_info">Mem infó (elérh/összes)</string>
+    <string name="mod_version">Mod</string>
+    <string name="mod_version_default">Ismeretlen</string>
+    <string name="service_client_name">%1$s: érintse meg a kezeléshez</string>
+    <string name="service_process_name">Folyamat: %1$s</string>
+    <string name="testing_battery_history">Akkumulátor-előzmények</string>
+    <string name="adb_notify">USB hibakeresési értesítés</string>
+    <string name="adb_notify_summary">Értesítések megjelenítése USB hibakeresési módban</string>
+    <string name="kill_app_longpress_back">Alkalmazás leállítása nyomva tartással</string>
+    <string name="kill_app_longpress_back_summary">A vissza gomb nyomva tartásával leállítja a futó alkalmazást.</string>
+    <string name="battery_history_details_for">UID részletei %d</string>
+    <string name="battery_history_uid">UID %1$d</string>
+    <string name="battery_history_network_usage">Hálózati használat részletei %1$s:</string>
+    <string name="battery_history_bytes_received">Fogadott bájtok: %1$d</string>
+    <string name="battery_history_bytes_sent">Küldött bájtok: %1$d</string>
+    <string name="battery_history_bytes_total">Összméret (bájt): %1$d</string>
+    <string name="battery_history_cpu_usage">CPU használat részletei %1$s:</string>
+    <string name="battery_history_user_time">Felhasználói idő:</string>
+    <string name="battery_history_system_time">Rendszeridő:</string>
+    <string name="battery_history_total_time">Teljes idő:</string>
+    <string name="battery_history_starts">Kezdődik: %1$d</string>
+    <string name="battery_history_packages_sharing_this_uid">Csomagok amik ezt a UID-t megosztják:</string>
+    <string name="battery_history_no_data">Nincs akkumulátor használati adat</string>
+    <string name="battery_history_sensor">Érzékelő:</string>
+    <string name="battery_history_wakelock">Részleges ébrentartás:</string>
+    <string name="battery_history_used_by_packages">Csomagok amik érzékelőt használtak:</string>
+    <string name="battery_history_sensor_usage">Használt %1$d alkalmak %2$s</string>
+    <string name="battery_history_sensor_usage_multi">Használt %1$d alkalom egyikével:</string>
+    <string name="battery_history_awake_label">Futó</string>
+    <string name="battery_history_screen_on_label">Képernyő bekapcsolva</string>
+    <string name="battery_history_phone_on_label">Telefon bekapcsolva</string>
+    <string name="battery_history_awake">Éber órák száma:</string>
+    <string name="battery_history_screen_on">Kijelző bekapcsolva:</string>
+    <string name="battery_history_phone_on">Telefon bekapcsolva:</string>
+    <string name="battery_history_screen_on_battery">Akkumulátoron:</string>
+    <string name="battery_history_screen_on_plugged">Töltőn:</string>
+    <string name="battery_stats_last_duration">@string/menu_stats_last_unplugged</string>
+    <string name="vpn_openvpn_port">Server port</string>
+    <string name="vpn_openvpn_protocol">Protokol használata:</string>
+    <string name="vpn_openvpn_device">Eszköz használata</string>
+    <string name="vpn_openvpn_userauth">Felhasználói hitelesítés</string>
+    <string name="vpn_openvpn_userauth_summary">További felhasználónév/jelszó beállítása ha szükséges</string>
+    <string name="vpn_openvpn_advanced_titlebar">Haladó Openvpn beállítások</string>
+    <string name="vpn_openvpn_comp_lzo">LZO tömörítés</string>
+    <string name="vpn_openvpn_comp_lzo_summary">LZO tömörítés kényszerítése</string>
+    <string name="vpn_openvpn_redirect_gateway_title">Átjáró átirányítása</string>
+    <string name="vpn_openvpn_redirect_gateway_summary">A forgalom VPN alagúton való kényszerített átvezetése</string>
+    <string name="vpn_openvpn_set_addr">Távoliak állítják be a címeket</string>
+    <string name="vpn_openvpn_set_addr_summary">hagyja üresen hogy manuálisan adjon alagút címet</string>
+    <string name="vpn_openvpn_set_local_addr">Helyi IP-cím</string>
+    <string name="vpn_openvpn_set_remote_addr">Távoli IP-cím</string>
+    <string name="vpn_openvpn_set_cipher">Titkosítási algoritmus</string>
+    <string name="vpn_openvpn_set_cipher_message">Hagyja üresen, hogy az alapértelmezett titkosítást használja</string>
+    <string name="vpn_openvpn_set_keysize">A titkosítási kulcs mérete</string>
+    <string name="vpn_openvpn_set_keysize_message">Hagyja üresen, hogy a titkosítás-specifikus alapértelmezettet használja</string>
+    <string name="vpn_openvpn_set_extra">További argumentumok</string>
+    <string name="vpn_openvpn_set_extra_message">Adjon meg további parancssori argumentumokat</string>
+    <string name="launcher_settings_title">ADWLauncher</string>
+    <string name="possibleButtons">Lehetséges gombok</string>
+    <string name="toggleWifi">Wi-Fi</string>
+    <string name="toggleWifiAp">Hordozható Wi-Fi hotspot</string>
+    <string name="toggleBluetooth">Bluetooth</string>
+    <string name="toggleGPS">GPS</string>
+    <string name="toggleData">Mobil Data</string>
+    <string name="toggleSync">Adatok szinkronizálása</string>
+    <string name="toggle2g3g">2G/3G</string>
+    <string name="toggleSound">Csengetés mód</string>
+    <string name="toggleBrightness">Fényerő</string>
+    <string name="toggleAutoRotate">Tájolás</string>
+    <string name="toggleScreenTimeout">Képernyő időkorlát</string>
+    <string name="toggleAirplane">Repülőgép</string>
+    <string name="toggleFlashlight">Vaku</string>
+    <string name="toggleLockScreen">Képernyőzár</string>
+    <string name="toggleWimax">WiMAX</string>
+    <string name="toggleWifiDescription">Wi-Fi bekapcsolása/kikapcsolása</string>
+    <string name="toggleWifiApDescription">Wi-Fi hotspot bekapcsolása/kikapcsolása</string>
+    <string name="toggleBluetoothDescription">Bluetooth bekapcsolása/kikapcsolása</string>
+    <string name="toggleGPSDescription">GPS bekapcsolása/kikapcsolása</string>
+    <string name="toggleDataDescription">Mobil adat bekapcsolása/kikapcsolása</string>
+    <string name="toggleSyncDescription">Adat szinkronizálás bekapcsolása/kikapcsolása</string>
+    <string name="toggle2g3gDescription">Váltás 2G és 3G között</string>
+    <string name="toggleSoundDescription">Váltás csak csengetés és rezgés közt</string>
+    <string name="toggleBrightnessDescription">Képernyő fényerejének kiválasztása</string>
+    <string name="toggleAutoRotateDescription">Forgatás ki/be</string>
+    <string name="toggleScreenTimeoutDescription">Képernyő kikapcsolásának időtartama</string>
+    <string name="toggleAirplaneDescription">Repülő üzemmód be/ki</string>
+    <string name="toggleFlashlightDescription">Fény be/ki</string>
+    <string name="toggleLockScreenDescription">Képernyőzár engedélyezése be/ki</string>
+    <string name="toggleWimaxDescription">WiMAX bekapcsolása/kikapcsolása</string>
+    <string name="widgetSettings">Widget kérelem beállítások</string>
+    <string name="wifiSettings">Wi-Fi események beállítása</string>
+    <string name="dataSettings">Adat események beállítása</string>
+    <string name="powerSettings">Teljesítmény események beállítása</string>
+    <string name="generalSettings">Általános beállítások</string>
+    <string name="autoDisable3G">Data mód kikapcsolja a 3g-t</string>
+    <string name="autoEnable3G">Data mód bekapcsolja a 3g-t</string>
+    <string name="autoDisable3GWithWifi">Wi-Fi kikapcsolja a 3g-t</string>
+    <string name="autoEnable3GWithWifi">Wi-Fi bekapcsolja a 3g-t</string>
+    <string name="useRoundCorners">Kerekített sarkok</string>
+    <string name="useVertical">Függőleges elrendezés</string>
+    <string name="useTransparent">Átlátszó Widget</string>
+    <string name="autoEnableSyncWithWifi">Wi-Fi bekapcsolja a szinkronizálást</string>
+    <string name="autoDisableSyncWithWifi">Wi-Fi kikapcsolja a szinkronizálást</string>
+    <string name="ringModeVibrateAsOn">Rezgés bekapcsolása</string>
+    <string name="monitorDataRoaming">Adat roaming figyelése</string>
+    <string name="autoEnableBluetoothWithPower">Töltéskor bluetooth be</string>
+    <string name="autoDisableBluetoothWithPower">Töltéskor bluetooth ki</string>
+    <string name="autoEnableWifiWithPower">Töltéskor Wi-Fi be</string>
+    <string name="autoDisableWifiWithPower">Töltéskor Wi-Fi ki</string>
+    <string name="autoDisable3GDescription">2G, ha a mobil adatátvitel le van tiltva</string>
+    <string name="autoEnable3GDescription">3G, ha a mobil adatátvitel engedélyezve van</string>
+    <string name="autoDisable3GWithWifiDescription">2G, ha a WiFi engedélyezve van</string>
+    <string name="autoEnable3GWithWifiDescription">3G, ha a WiFi le van tiltva</string>
+    <string name="useRoundCornersDescription">Widget ikonok lekerekítése</string>
+    <string name="useTransparentDescription">Widget háttér tiltása</string>
+    <string name="useVerticalDescription">Megjelenítés függőlegesen tájolva</string>
+    <string name="autoEnableSyncWithWifiDescription">Sync engedélyezése Wi-Fi kapcsolatnál</string>
+    <string name="autoDisableSyncWithWifiDescription">Sync tiltása Wi-Fi kapcsolatnál</string>
+    <string name="ringModeVibrateAsOnDescription">Mutassa azt, hogy a hang be van kapcsolva, amikor csak rezgő üzemmódon van</string>
+    <string name="monitorDataRoamingDescription">Az adat státusz piros, ha az adat roaming engedélyezve van</string>
+    <string name="autoEnableBluetoothWithPowerDescription">Blootooth engedélyezve töltés közben</string>
+    <string name="autoDisableBluetoothWithPowerDescription">Blootooth tiltása töltő lecsatlakozásakor</string>
+    <string name="autoEnableWifiWithPowerDescription">WiFi engedélyezve töltés közben</string>
+    <string name="autoDisableWifiWithPowerDescription">Wi-Fi kikapcsolása a töltő eltávolításakor</string>
+    <string name="networkModeSpinner">Hálózati mód kiválasztása</string>
+    <string name="brightnessSpinner">Fényerő értékeinek beállítása</string>
+    <string name="ringModeSpinner">Csengetési mód kiválasztása</string>
+    <string name="screenTimeoutSpinner">Képernyő időkorlát kiválasztása</string>
+    <string name="backgroundImageSpinner">Háttér kiválasztása</string>
+    <string name="notConfigured">Nincs beállítva. Kérem próbálja újra</string>
+    <string name="ok">OK</string>
+    <string name="widget_count">(%d widgetek)</string>
+    <string name="cm_settings_title">CyanogenMod beállítások</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"4G beállítások"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"4G hálózat és modem beállítása és kezelése"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"4G MAC-cím"</string>
 </resources>
