--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -214,6 +214,7 @@
     <string name="settings_shortcut" msgid="3672145147925639262">"Ustawienia"</string>
     <string name="airplane_mode" msgid="8837269988154128601">"Tryb samolotowy"</string>
     <string name="airplane_mode_summary" msgid="3154817401368780988">"Wyłącz wszystkie połączenia bezprzewodowe"</string>
+    <string name="device_hostname">Nazwa hosta</string>
     <string name="airplane_mode_turning_on" msgid="8871739222526957255">"Wyłączanie połączeń bezprzewodowych..."</string>
     <string name="airplane_mode_turning_off" msgid="3393168549611505996">"Włączanie połączeń bezprzewodowych..."</string>
     <string name="radio_controls_title" msgid="5868688473587168882">"Sieci zwykłe i bezprzewodowe"</string>
@@ -501,11 +502,15 @@
     <string name="device_info_settings" msgid="475872867864762157">"Stan telefonu"</string>
     <string name="system_update_settings_list_item_title" msgid="3342887311059985961">"Aktualizacje systemowe"</string>
     <string name="system_update_settings_list_item_summary" msgid="3853057315907710747"></string>
+    <string name="cpu_info">Informacje o procesorze</string>
+    <string name="mem_info">Pamięć RAM (dost./całk.)</string>
     <string name="firmware_version" msgid="4801135784886859972">"Wersja systemu Android"</string>
     <string name="model_number" msgid="3765737700545384794">"Numer modelu"</string>
     <string name="baseband_version" msgid="1848990160763524801">"Wersja pasma podstawowego"</string>
     <string name="kernel_version" msgid="9192574954196167602">"Wersja jądra"</string>
     <string name="build_number" msgid="3075795840572241758">"Numer kompilacji"</string>
+    <string name="mod_version">Wersja modyfikacji</string>
+    <string name="mod_version_default">Nieznana</string>
     <string name="device_info_not_available" msgid="8062521887156825182">"Niedostępna"</string>
     <string name="device_status_activity_title" msgid="1411201799384697904">"Informacje o telefonie"</string>
     <string name="device_status" msgid="607405385799807324">"Informacje o telefonie"</string>
@@ -584,6 +589,7 @@
     <string name="apn_auth_type_chap" msgid="3369626283789068360">"CHAP"</string>
     <string name="apn_auth_type_pap_chap" msgid="9102343063036134541">"PAP lub CHAP"</string>
     <string name="apn_type" msgid="469613123902220544">"Typ APN"</string>
+    <string name="apn_protocol" msgid="3272222921649348640">"Protokół APN"</string>
     <string name="menu_delete" msgid="6981294422841124659">"Usuń APN"</string>
     <string name="menu_new" msgid="3014205883303921729">"Nowa nazwa APN"</string>
     <string name="menu_save" msgid="8109345640668285399">"Zapisz"</string>
@@ -598,8 +604,8 @@
     <string name="restore_default_apn_completed" msgid="3990449939234957281">"Zakończono resetowanie domyślnych ustawień APN"</string>
     <string name="master_clear_title" msgid="5907939616087039756">"Ustawienia fabryczne"</string>
     <string name="master_clear_summary" msgid="4986154238001088492">"Wymazuje wszystkie dane w telefonie"</string>
-    <string name="master_clear_desc" product="nosdcard" msgid="2163013814299528247">"Spowoduje to wymazanie wszystkich danych z "<b>"wewnętrznej pamięci"</b>" telefonu, w tym:"\n\n<li>"danych konta Google,"</li>\n<li>"danych i ustawień systemu oraz aplikacji,"</li>\n<li>"pobranych aplikacji."</li>\n\n"Aby usunąć wszystkie dane z tego telefonu, należy wyczyścić "<b>"nośnik USB"</b>"."\n\n</string>
-    <string name="master_clear_desc" product="default" msgid="1741944496458365969">"Spowoduje to wymazanie wszystkich danych z "<b>"wewnętrznej pamięci"</b>" telefonu, w tym:"\n\n<li>"danych konta Google,"</li>\n<li>"danych i ustawień systemu oraz aplikacji,"</li>\n<li>"pobranych aplikacji."</li>\n\n"Aby usunąć również muzykę, zdjęcia i inne dane użytkownika, należy wyczyścić "<b>"kartę SD"</b>"."\n\n</string>
+    <string name="master_clear_desc" product="nosdcard" msgid="2163013814299528247">"Skasujesz wszystkie dane z "<b>"wewnętrznej pamięci"</b>" telefonu, w tym:"\n\n<li>"dane konta Google,"</li>\n<li>"dane i ustawienia systemu oraz aplikacji,"</li>\n<li>"pobrane aplikacje."</li>\n\n"Aby usunąć wszystkie dane z tego telefonu, należy wyczyścić "<b>"nośnik USB"</b>"."\n\n</string>
+    <string name="master_clear_desc" product="default" msgid="1741944496458365969">"Skasujesz wszystkie dane z "<b>"wewnętrznej pamięci"</b>" telefonu, w tym:"\n\n<li>"dane konta Google,"</li>\n<li>"dane i ustawienia systemu oraz aplikacji,"</li>\n<li>"pobrane aplikacje."</li>\n\n"Aby usunąć również muzykę, zdjęcia i inne dane użytkownika, należy wyczyścić "<b>"kartę SD"</b>"."\n\n</string>
     <string name="erase_external_storage" product="nosdcard" msgid="969364037450286809">"Wyczyść nośnik USB"</string>
     <string name="erase_external_storage" product="default" msgid="1397239046334307625">"Wyczyść kartę SD"</string>
     <string name="erase_external_storage_description" product="nosdcard" msgid="1657838142707381027">"Wymaż wszystko z wewn. USB."</string>
@@ -625,7 +631,7 @@
     <string name="media_format_gesture_explanation" product="nosdcard" msgid="1379736318750958338">"Aby potwierdzić zamiar wyczyszczenia nośnika USB, musisz narysować wzór odblokowania."</string>
     <string name="media_format_gesture_explanation" product="default" msgid="1681213416497647321">"Aby potwierdzić zamiar wyczyszczenia karty SD, musisz narysować wzór odblokowania."</string>
     <string name="call_settings_title" msgid="5188713413939232801">"Ustawienia połączeń"</string>
-    <string name="call_settings_summary" msgid="7291195704801002886">"Poczta głosowa, przekierowania połączeń, poł. oczekujące, ID rozmówcy"</string>
+    <string name="call_settings_summary" msgid="7291195704801002886">"Poczta głosowa, przekazywanie połączeń, poł. oczekujące, ID rozmówcy"</string>
     <string name="tether_settings_title_usb" msgid="4315031513434087777">"Tethering"</string>
     <string name="tether_settings_title_wifi" msgid="3277144155960302049">"Przenośny punkt dostępu"</string>
     <string name="tether_settings_title_both" msgid="2734066355556891504">"Tethering i przenośny punkt dostępu"</string>
@@ -837,7 +843,7 @@
     <string name="auto_punctuate_summary" msgid="4372126865670574837">"Naciśnij dwukrotnie klawisz spacji, aby wstawić kropkę"</string>
     <string name="show_password" msgid="2198798062604049206">"Widoczne hasła"</string>
     <string name="show_password_summary" msgid="3806709974395178121">"Pokazuj hasło podczas wpisywania"</string>
-    <string name="ime_security_warning" msgid="812267421486877917">"Ta metoda wprowadzania może gromadzić cały wpisywany tekst, w tym dane osobiste w postaci haseł i numerów kart kredytowych. Metoda pochodzi z aplikacji <xliff:g id="IME_APPLICATION_NAME">%1$s</xliff:g>. Czy użyć tej metody wprowadzania?"</string>
+    <string name="ime_security_warning" msgid="812267421486877917">"Ten sposób wprowadzania tekstu może gromadzić całą wpisaną treść, w tym dane osobiste w postaci haseł i numerów kart kredytowych. Dotyczy to aplikacji <xliff:g id="IME_APPLICATION_NAME">%1$s</xliff:g>. Czy użyć tego sposobu wprowadzania tekstu?"</string>
     <string name="user_dict_settings_titlebar" msgid="765659257455000490">"Słownik użytkownika"</string>
     <string name="user_dict_settings_title" msgid="8357027437499042191">"Słownik użytkownika"</string>
     <string name="user_dict_settings_summary" msgid="7965571192902870454"></string>
@@ -871,10 +877,14 @@
     <string name="development_settings_summary" msgid="2151320488701538355">"Ustaw opcje związane z programowaniem aplikacji"</string>
     <string name="enable_adb" msgid="7982306934419797485">"Debugowanie USB"</string>
     <string name="enable_adb_summary" msgid="4881186971746056635">"Tryb debugowania, gdy podłączone jest USB"</string>
+    <string name="adb_notify">Powiadomienie o debugowaniu</string>
+    <string name="adb_notify_summary">Wyświetl powiadomienie, gdy aktywny jest tryb debugowania</string>
     <string name="keep_screen_on" msgid="1146389631208760344">"Zostaw włączony"</string>
     <string name="keep_screen_on_summary" msgid="2173114350754293009">"Ekran nie będzie gaszony podczas ładowania telefonu"</string>
     <string name="allow_mock_location" msgid="2787962564578664888">"Pozorowanie lokalizacji"</string>
     <string name="allow_mock_location_summary" msgid="317615105156345626">"Zezwalaj na pozorowanie lokalizacji"</string>
+    <string name="kill_app_longpress_back">Zatrzymaj aplikację przyciskiem wstecz</string>
+    <string name="kill_app_longpress_back_summary">Przytrzymanie przycisku wstecz spowoduje zabicie wyświetlanej aplikacji</string>
     <string name="adb_warning_title" msgid="6234463310896563253">"Czy zezwalać na debugowanie USB?"</string>
     <string name="adb_warning_message" msgid="5352555112049663033">"Debugowanie USB jest przeznaczone wyłącznie do celów programistycznych. Może posłużyć do kopiowania danych między komputerem a urządzeniem, instalowania aplikacji w urządzeniu bez powiadamiania, a także odczytywania danych dziennika."</string>
     <string name="gadget_picker_title" msgid="98374951396755811">"Wybierz gadżet"</string>
@@ -1159,4 +1169,96 @@
     <string name="sound_category_calls_title" msgid="3688531959256239012">"Połączenia przychodzące"</string>
     <string name="sound_category_notification_title" msgid="3502115998790286943">"Powiadomienia"</string>
     <string name="sound_category_feedback_title" msgid="4399742321363475393">"Reakcje"</string>
+    
+    <string name="launcher_settings_title">ADWLauncher</string>
+
+    <string name="possibleButtons">Dostępne przyciski</string>
+    <string name="toggleWifi">Wi-Fi</string>
+    <string name="toggleWifiAp">Przenośny hotspot Wi-Fi</string>
+    <string name="toggleBluetooth">Bluetooth</string>
+    <string name="toggleGPS">GPS</string>
+    <string name="toggleData">Internet Mobilny</string>
+    <string name="toggleSync">Synchronizacja</string>
+    <string name="toggle2g3g">2G/3G</string>
+    <string name="toggleSound">Profil Dźwięku</string>
+    <string name="toggleBrightness">Jasność</string>
+    <string name="toggleAutoRotate">Obrót ekranu</string>
+    <string name="toggleScreenTimeout">Wygaszenie ekranu</string>
+    <string name="toggleAirplane">Tryb samolotowy</string>
+    <string name="toggleFlashlight">Latarka</string>
+    <string name="toggleLockScreen">Blokada ekranu</string>
+
+    <string name="toggleWifiDescription">Włącz/wyłącz Wifi</string>
+    <string name="toggleWifiApDescription">Włącz/wyłącz hotspot Wi-Fi</string>
+    <string name="toggleBluetoothDescription">Włącz/wyłącz Bluetooth</string>
+    <string name="toggleGPSDescription">Włącz/wyłącz GPS</string>
+    <string name="toggleDataDescription">Włącz/wyłącz mobilny internet</string>
+    <string name="toggleSyncDescription">Włącz/wyłącz synchronizację</string>
+    <string name="toggle2g3gDescription">Przełącz między 2G i 3G</string>
+    <string name="toggleSoundDescription">Zmień profil dźwięku</string>
+    <string name="toggleBrightnessDescription">Zmień jasność</string>
+    <string name="toggleAutoRotateDescription">Włącz/wyłącz automatyczne obracanie ekranu</string>
+    <string name="toggleScreenTimeoutDescription">Zmień czas wygaszenia ekranu</string>
+    <string name="toggleAirplaneDescription">Włącz/wyłącz tryb samolotowy</string>
+    <string name="toggleFlashlightDescription">Włącz/wyłącz latarkę</string>
+    <string name="toggleLockScreenDescription">Włącz/wyłącz blokadę ekranu</string>
+
+
+    <string name="widgetSettings">Ustawienia widgetu</string>
+    <string name="wifiSettings">Ustawienia WiFi</string>
+    <string name="dataSettings">Ustawienia mobilnego internetu</string>
+    <string name="powerSettings">Ustawienia zasilania</string>
+
+    <string name="generalSettings">Ustawienia ogólne</string>
+
+    <string name="autoDisable3G">Internet mobilny wyłącza 3G</string>
+    <string name="autoEnable3G">Internet mobilny włącza 3G</string>
+    <string name="autoDisable3GWithWifi">Wifi wyłącza 3G</string>
+    <string name="autoEnable3GWithWifi">Wifi włącza 3G</string>
+    <string name="useRoundCorners">Zaokrąglone rogi</string>
+    <string name="useVertical">Układ pionowy</string>
+    <string name="useTransparent">Przezroczystość</string>
+    <string name="autoEnableSyncWithWifi">Wifi włącza Synchronizację</string>
+    <string name="autoDisableSyncWithWifi">Wifi wyłącza Synchronizacje</string>
+    <string name="ringModeVibrateAsOn">Wibruj gdy włączony</string>
+    <string name="monitorDataRoaming">Obserwuj Roaming</string>
+    <string name="autoEnableBluetoothWithPower">Zasil. zewn. wł. Bluetooth</string>
+    <string name="autoDisableBluetoothWithPower">Zasil. zewn. wył. Bluetooth</string>
+    <string name="autoEnableWifiWithPower">Zasil. zewn. wł. WiFi</string>
+    <string name="autoDisableWifiWithPower">Zasil. zewn. wył. WiFi</string>
+
+    <string name="autoDisable3GDescription">2G kiedy internet mobilny jest włączony</string>
+    <string name="autoEnable3GDescription">3G kiedy internet mobilny jest wyłączony</string>
+    <string name="autoDisable3GWithWifiDescription">2G kiedy Wifi jest włączone</string>
+    <string name="autoEnable3GWithWifiDescription">3G kiedy Wifi jest wyłączone</string>
+    <string name="useRoundCornersDescription">Użyj zaokrąglonych ikon</string>
+    <string name="useTransparentDescription">Brak tła</string>
+    <string name="useVerticalDescription">Orientacja pionowa</string>
+    <string name="autoEnableSyncWithWifiDescription">Włącz synchronizację kiedy WiFi jest włączone</string>
+    <string name="autoDisableSyncWithWifiDescription">Wyłącz synchronizację kiedy WiFi jest wyłączone</string>
+    <string name="ringModeVibrateAsOnDescription">Pokaż dźwięk jako włączony przy samych wibracjach</string>
+    <string name="monitorDataRoamingDescription">Status internetu czerwony podczas roamingu</string>
+    <string name="autoEnableBluetoothWithPowerDescription">Bluetooth włączony, gdy zasilanie podłączone</string>
+    <string name="autoDisableBluetoothWithPowerDescription">Bluetooth wyłączony, gdy zasilanie odłączone</string>
+    <string name="autoEnableWifiWithPowerDescription">WiFi włączone, gdy zasilanie podłączone</string>
+    <string name="autoDisableWifiWithPowerDescription">WiFi wyłączone, gdy zasilanie odłączone</string>
+
+    <string name="networkModeSpinner">Wybierz tryby sieci</string>
+    <string name="brightnessSpinner">Wybierz poziomy jasności</string>
+    <string name="ringModeSpinner">Wybierz profile dźwięku</string>
+    <string name="screenTimeoutSpinner">Wybierz opóźnienia wygaszenia ekranu</string>
+    <string name="backgroundImageSpinner">Wybierz tło</string>
+
+    <string name="notConfigured">Nie skonfigurowano. Proszę dodać ponownie</string>
+
+    <string name="ok">Ok</string>
+
+
+    <!-- Widget Picker -->
+    <string name="widget_count">(%d widżetów)</string>
+
+    <string name="cm_settings_title">Ustawienia CyanogenMod</string>
+    <string name="wimax_settings" msgid="1574837328738396794">"Ustawienia 4G"</string>
+    <string name="wimax_settings_summary" msgid="3207355006084135453">"Konfiguruj sieć i modem 4G oraz zarządzaj nimi"</string>
+    <string name="status_wimax_mac_address" msgid="8390791848661413416">"Adres MAC 4G"</string>
 </resources>
