--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1496,6 +1496,8 @@
     <string name="apn_auth_type_pap_chap">PAP or CHAP</string>
     <!-- Edit access point labels: The type of APN -->
     <string name="apn_type">APN type</string>
+    <!-- Edit access point labels: The protocol of the APN, e.g., "IPv4", "IPv6", or "IPv4/IPv6". -->
+    <string name="apn_protocol">APN protocol</string>
     <!-- Edit access point screen menu option to delete this APN -->
     <string name="menu_delete">Delete APN</string>
     <!-- APNs screen menu option to create a brand spanking new APN -->
@@ -2899,4 +2901,13 @@ found in the list of installed applications.</string>
     <!-- Hotspot Widget -->
     <string name="hotspot_gadget_title">Hotspot Toggle</string>
     <string name="hotspot_gadget_caption">Hotspot</string>
+
+    <string name="wimax_settings">4G settings</string>
+    <string name="wimax_settings_summary">Set up &amp; manage 4G network and modem</string>
+    <string name="status_wimax_mac_address">4G MAC address</string>
+
+    <!-- A menu item in "About phone" that allows the user to update the phone with settings
+    from their cell phone carrier. The use of the string is similar to the string
+    "system_update_settings_list_item_title" in this project. [CHAR LIMIT=25] -->
+    <string name="additional_system_update_settings_list_item_title">Additional system updates</string>
 </resources>
