Widgets: Add Screen rotation toggle widget to standalone widgets.
Change-Id: I8bfd9ec92fe1ab182ac7d9ab609e5f862f2f68ce

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2806,6 +2806,10 @@ found in the list of installed applications.</string>
     <string name="brightness_gadget_title">Brightness Toggle</string>
     <string name="brightness_gadget_caption">Brightness</string>
 
+    <!-- Orientation Widget -->
+    <string name="orientation_gadget_title">Rotation Toggle</string>
+    <string name="orientation_gadget_caption">Rotation</string>
+
     <!-- Hotspot Widget -->
     <string name="hotspot_gadget_title">Hotspot Toggle</string>
     <string name="hotspot_gadget_caption">Hotspot</string>
